force-app/main/default/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate_TODAY__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Countdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ED_Close_Date_Delta__c</fullName>
        <formula>ED_Predicted_Close_Date__c - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What: This is the number of days before or after the close date the opportunity is predicted to close.  It is calculated by subtracting the Close Date from the Predicted Close Date. This is from the SDO. DO NOT REMOVE.</inlineHelpText>
        <label>ED Close Date Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes__c</fullName>
        <description>What: Einstein Discovery Field. This is from the SDO. DO NOT REMOVE.</description>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ED_Outcome__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <inlineHelpText>This is the number of DAYS after the Created Date that this opportunity is targeted to close.</inlineHelpText>
        <label>ED Predicted Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Predicted_Close_Date__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <formula>DateTimeCreated__c + ED_Outcome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is calculated by adding the number of days in the &quot;ED Predicted Time to Close&quot; field to the CREATED DATE.</inlineHelpText>
        <label>ED Predicted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Prescription__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exec_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader</description>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity DIscovery.</inlineHelpText>
        <label>Executive Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interactive_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader</description>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity Discovery</inlineHelpText>
        <label>Interactive Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppTotScope1EmissionsInTco2e__c</fullName>
        <label>Total Scope 1 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTotScope2LocBasedEmissions__c</fullName>
        <label>Total Scope 2 Location-Based Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTotScope2MktBasedEmissions__c</fullName>
        <label>Total Scope 2 Market-based Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTotScope3EmissionsInTco2e__c</fullName>
        <description>Roll-Up of Total Scope 3 Emissions (tCO2e)</description>
        <label>Total Scope 3 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTotalScp3DnstrmEmissions__c</fullName>
        <description>Roll-Up of Total Scope 3 Downstream Emissions (tCO2e)</description>
        <label>Total Scope 3 Downstream Emissions(tCO2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppTotalScp3UpstrmEmissions__c</fullName>
        <description>Roll-Up of Total Scope 3 Upstream Emissions (tCO2e)</description>
        <label>Total Scope 3 Upstream Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC10001</fullName>
                </value>
                <value>
                    <fullName>GC20002</fullName>
                </value>
                <value>
                    <fullName>GC50000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Pardot_Is_B2BMA_Plus_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: This data was added to support the B2BMA Plus (Pardot) Demo. This is here so we know what came from that import incase we want to remove the data. Who: Jesse Chase. When: 07/14/2021</description>
        <label>Is B2BMA Plus Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Quip_Close_Plan_Quip__c</fullName>
        <description>What: Used by the Quip lightning component to embed a Close Plan on the Opportunity record.  Added May 2021</description>
        <label>Close_Plan_Quip</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: This field is needed to allow FSL Mobile users to create new opportunities</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Discount__c</fullName>
        <description>What: used in approval process</description>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used for the &quot;Partner Opportunities&quot; related list on Partner Account records.</description>
        <label>Partner Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>PartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Set the Primary contact relationship</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Reason_Lost__c</fullName>
        <description>What: Reason lost field</description>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Issues</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Stalled_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Checkbox for stuck oppty. Used in reporting</description>
        <label>Stalled Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Status_Value__c</fullName>
        <description>What: Status good or bad. Used in Formula fields</description>
        <formula>IF( CloseDate_TODAY__c &gt;0, &quot;good&quot;, &quot;bad&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Winning_Competitor__c</fullName>
        <description>What: used in reporting to detail the winning competitor</description>
        <label>Winning Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup field to the Case Object.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_3_Carbon_Footprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope 3 Carbon Footprint</label>
        <referenceTo>Scope3CrbnFtprnt</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Asset_Carbon_Footprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vehicle Asset Carbon Footprint Lookup</description>
        <label>Vehicle Asset Carbon Footprint</label>
        <referenceTo>VehicleAssetCrbnFtprnt</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>db_days_CloseDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>CloseDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>